Preferences - Translated to Spanish

--- a/language/en.json
+++ b/language/en.json
@@ -1,4 +1,47 @@
 
 {
 	
+	"hdd" : "HDD",
+	"account" : "Account",
+	"socialNetworks" : "Social Networks",
+	"language" : "Language",
+	"date" : "Date & Time",
+	"wallpaper" : "Wallpaper",
+	"about" : "About",
+	"moreFeatures" : "NEED MORE FEATURES?",
+	"starter" : "STARTER",
+	"priceStarter" : "FREE",
+	"pro" : "PRO",
+	"pricePro" : "$4,99",
+	"advance" : "ADVANCE",
+	"priceAdvance" : "$9,99",
+	"ultimate" : "ULTIMATE",
+	"priceUltimate" : "$14,99",
+	"avatarEdit" : "EDIT",
+	"usernameName" : "Username",
+	"usernameMail" : "Email",
+	"changePassword" : "Change Password",
+	"saveData" : "Save Changes",
+	"passwordTitle" : "PASSWORD",
+	"passwordDescription" : "Change your password or recover your current one",
+	"forgotPassword" : "Forgot your password?",
+	"oldPassword" : "Old Password",
+	"newPassword" : "New Password",
+	"renewPassword" : "Repeat New Password",
+	"cancelPassword" : "Cancel",
+	"savePassword" : "Save Changes",
+	"socialDescription" : "You can link all your social networks with your weeZeel account so we can notify you whatever happens on them",
+	"twitterName" : "Your Twitter account:",
+	"facebookName" : "Your Facebook account:",
+	"instagramName" : "Your Instagram account:",
+	"socialBottom" : "We're currently working on adding more social networks, stay tuned",
+	"usernameWhitespaces" : "Your username cannot contain whitespaces",
+	"mailWhitespaces" : "Your email cannot contain whitespaces",
+	"usernameEmpty" : "Your username cannot be empty",
+	"mailEmpty" : "Your email cannot be empty",
+	"dataChanged" : "Your data has been changed successfully",
+	"passwordChanged" : "Your password has been changed successfully",
+	"retrievePassword" : "Please send us a mail to weezeel@weezeel.com asking us to retrieve your password. Thank you.",
+	"freeSpace" : "FREE"
+
 }
