--- a/language/es.json
+++ b/language/es.json
@@ -1,4 +1,47 @@
 
 {
 	
+	"hdd" : "Disco",
+	"account" : "Cuenta",
+	"socialNetworks" : "Redes Sociales",
+	"language" : "Idioma",
+	"date" : "Fecha & Hora",
+	"wallpaper" : "Fondos",
+	"about" : "Acerca",
+	"moreFeatures" : "¿QUIERES MÁS FUNCIONES?",
+	"starter" : "STARTER",
+	"priceStarter" : "GRATIS",
+	"pro" : "PRO",
+	"pricePro" : "4,99€",
+	"advance" : "ADVANCE",
+	"priceAdvance" : "9,99€",
+	"ultimate" : "ULTIMATE",
+	"priceUltimate" : "14,99€",
+	"avatarEdit" : "EDITAR",
+	"usernameName" : "Usuario",
+	"usernameMail" : "Correo",
+	"changePassword" : "Cambiar Contraseña",
+	"saveData" : "Guardar cambios",
+	"passwordTitle" : "CONTRASEÑA",
+	"passwordDescription" : "Cambia tu contraseña o recupera la actual",
+	"forgotPassword" : "¿No la recuerdas?",
+	"oldPassword" : "Antigua Contraseña",
+	"newPassword" : "Nueva Contraseña",
+	"renewPassword" : "Repite la Contraseña",
+	"cancelPassword" : "Cancelar",
+	"savePassword" : "Guardar Cambios",
+	"socialDescription" : "Puedes asocial tus redes sociales con tu cuenta de weeZeel para saber qué es lo que pasa en todas ellas",
+	"twitterName" : "Tu cuenta de Twitter:",
+	"facebookName" : "Tu cuenta de Facebook:",
+	"instagramName" : "Tu cuenta de Instagram:",
+	"socialBottom" : "Estamos trabajando en añadir más redes sociales, mantente atento",
+	"usernameWhitespaces" : "Tu nombre de usuario no puede contener espacios en blanco",
+	"mailWhitespaces" : "To correo electrónico no puede contener espacios en blanco",
+	"usernameEmpty" : "No puedes dejar el campo de nombre de usuario vacío",
+	"mailEmpty" : "No puedes dejar el campo de correo electrónico vacío",
+	"dataChanged" : "Tus datos han sido cambiados",
+	"passwordChanged" : "Tu contraseña ha sido cambiada",
+	"retrievePassword" : "Por favor mándanos un correo a weezeel@weezeel.com pidiéndonos que te cambiemos la contraseña. Muchas gracias.",
+	"freeSpace" : "LIBRES"
+
 }
