Preferences - Deleted Instagram

--- a/language/es.json
+++ b/language/es.json
@@ -30,10 +30,9 @@
 	"renewPassword" : "Repite la Contraseña",
 	"cancelPassword" : "Cancelar",
 	"savePassword" : "Guardar Cambios",
-	"socialDescription" : "Puedes asocial tus redes sociales con tu cuenta de weeZeel para saber qué es lo que pasa en todas ellas",
+	"socialDescription" : "Puedes asociar tus redes sociales con tu cuenta de weeZeel para saber qué es lo que pasa en todas ellas",
 	"twitterName" : "Tu cuenta de Twitter:",
 	"facebookName" : "Tu cuenta de Facebook:",
-	"instagramName" : "Tu cuenta de Instagram:",
 	"socialBottom" : "Estamos trabajando en añadir más redes sociales, mantente atento",
 	"usernameWhitespaces" : "Tu nombre de usuario no puede contener espacios en blanco",
 	"mailWhitespaces" : "To correo electrónico no puede contener espacios en blanco",
