Preferences - Started "Invite" option

--- a/language/en.json
+++ b/language/en.json
@@ -7,6 +7,7 @@
 	"language" : "Language",
 	"date" : "Date & Time",
 	"wallpaper" : "Wallpaper",
+	"invite" : "Invite",
 	"about" : "About",
 	"moreFeatures" : "NEED MORE FEATURES?",
 	"starter" : "STARTER",
