--- a/language/es.json
+++ b/language/es.json
@@ -7,6 +7,7 @@
 	"language" : "Idioma",
 	"date" : "Fecha & Hora",
 	"wallpaper" : "Fondos",
+	"invite" : "Invitar",
 	"about" : "Acerca",
 	"moreFeatures" : "¿QUIERES MÁS FUNCIONES?",
 	"starter" : "STARTER",
