--- a/language/es.json
+++ b/language/es.json
@@ -45,6 +45,11 @@
 	"freeSpace" : "LIBRES",
 	"inviteTitle" : "Genera una weeKey para que un amigo pruebe weeZeel",
 	"inviteExplanation" : "Piensa bien a quién invitas, sólo dispones de 1 invitación para usar. Ten cuidado con quién usa tu weeeKey porque si tu amigo es baneado tu también serás responsable.",
-	"inviteButton" : "¡Generar!"
+	"inviteButton" : "¡Generar!",
+	"upgradePlans" : "En el futuro podrás contratar más espacio y funcionalidades.",
+	"changeLanguage" : "Aquí vas a poder cambiar el idioma que tienes asociado a tu cuenta.",
+	"changeDate" : "En esta pestaña podrás modificar la fecha y hora que se te mostrará por defecto.",
+	"changeWallpaper" : "Una gran cartelera de fondos de escritorio para que decores weeZeel a tu gusto. Además podrás subir fotos tuyas o usar las que estén en weeXplorer.",
+	"aboutError" : "El equipo de weeZeel, quién compone el proyecto e ideales que perseguimos."
 
 }
