--- a/language/en.json
+++ b/language/en.json
@@ -50,6 +50,7 @@
 	"changeLanguage" : "Here you'll be able to change your account language.",
 	"changeDate" : "On this tab you will modify the date & hour you want to use.",
 	"changeWallpaper" : "Many wallpapers so you can decorate weeZeel as you like. You can also upload photos or use those which are on weeXplorer.",
-	"aboutError" : "weeZeel Team, who is weeZeel and what do we want."
+	"aboutError" : "weeZeel Team, who is weeZeel and what do we want.",
+	"usedweeKey" : "Your weeKey has already been used"
 
 }
