Preferences - Added username comprobation

--- a/language/en.json
+++ b/language/en.json
@@ -35,10 +35,10 @@
 	"twitterName" : "Your Twitter account:",
 	"facebookName" : "Your Facebook account:",
 	"socialBottom" : "We're currently working on adding more social networks, stay tuned",
-	"usernameWhitespaces" : "Your username cannot contain whitespaces",
-	"mailWhitespaces" : "Your email cannot contain whitespaces",
-	"usernameEmpty" : "Your username cannot be empty",
-	"mailEmpty" : "Your email cannot be empty",
+	"usernameError" : "Your username can only contain letters (uppercase and lowercase), numbers, full dots and underscope",
+	"mailError" : "Please introduce a valid email address",
+	"usernameLength" : "Your username has to be 3 characters long or more",
+	"mailEmpty" : "Please introduce an email address",
 	"dataChanged" : "Your data has been changed successfully",
 	"passwordChanged" : "Your password has been changed successfully",
 	"retrievePassword" : "Please send us a mail to weezeel@weezeel.com asking us to retrieve your password. Thank you.",
