--- a/language/es.json
+++ b/language/es.json
@@ -35,9 +35,9 @@
 	"twitterName" : "Tu cuenta de Twitter:",
 	"facebookName" : "Tu cuenta de Facebook:",
 	"socialBottom" : "Estamos trabajando en añadir más redes sociales, mantente atento",
-	"usernameWhitespaces" : "Tu nombre de usuario no puede contener espacios en blanco",
-	"mailWhitespaces" : "To correo electrónico no puede contener espacios en blanco",
-	"usernameEmpty" : "No puedes dejar el campo de nombre de usuario vacío",
+	"usernameError" : "Tu nombre de usuario sólo puede contener letras (mayúsculas y minúsculas), números, puntos y barra baja",
+	"mailError" : "Por favor introduce una dirección de correo electrónico válida",
+	"usernameLength" : "Tu nombre de usuario debe tener mínimo 3 carácteres",
 	"mailEmpty" : "No puedes dejar el campo de correo electrónico vacío",
 	"dataChanged" : "Tus datos han sido cambiados",
 	"passwordChanged" : "Tu contraseña ha sido cambiada",
