--- a/language/es.json
+++ b/language/es.json
@@ -52,6 +52,7 @@
 	"changeDate" : "En esta pestaña podrás modificar la fecha y hora que se te mostrará por defecto.",
 	"changeWallpaper" : "Una gran cartelera de fondos de escritorio para que decores weeZeel a tu gusto. Además podrás subir fotos tuyas o usar las que estén en weeXplorer.",
 	"aboutError" : "El equipo de weeZeel, quién compone el proyecto e ideales que perseguimos.",
-	"usedweeKey" : "Tu weeKey ya ha sido utilizada"
+	"usedweeKey" : "Tu weeKey ya ha sido utilizada",
+	"demoweeKey" : "Las cuentas de demostración no pueden crear weeKeys"
 
 }
