Preferences - Killed app 69 and inserted to 3

--- a/language/en.json
+++ b/language/en.json
@@ -1,58 +1,97 @@
 
 {
-	
-	"hdd" : "HDD",
+
+	"hdd"     : "Disk",
 	"account" : "Account",
-	"socialNetworks" : "Social Networks",
-	"language" : "Language",
-	"date" : "Date & Time",
-	"wallpaper" : "Wallpaper",
-	"invite" : "Invite",
-	"about" : "About",
-	"moreFeatures" : "NEED MORE FEATURES?",
-	"starter" : "STARTER",
-	"priceStarter" : "FREE",
-	"pro" : "PRO",
-	"pricePro" : "$4,99",
-	"advance" : "ADVANCE",
-	"priceAdvance" : "$9,99",
-	"ultimate" : "ULTIMATE",
-	"priceUltimate" : "$14,99",
-	"avatarEdit" : "EDIT",
-	"usernameName" : "Username",
-	"usernameMail" : "Email",
-	"changePassword" : "Change Password",
-	"saveData" : "Save Changes",
-	"passwordTitle" : "PASSWORD",
-	"passwordDescription" : "Change your password or recover your current one",
-	"forgotPassword" : "Forgot your password?",
-	"oldPassword" : "Old Password",
-	"newPassword" : "New Password",
-	"renewPassword" : "Repeat New Password",
-	"cancelPassword" : "Cancel",
-	"savePassword" : "Save Changes",
-	"socialDescription" : "You can link all your social networks with your weeZeel account so we can notify you whatever happens on them",
-	"twitterName" : "Your Twitter account:",
-	"facebookName" : "Your Facebook account:",
-	"socialBottom" : "We're currently working on adding more social networks, stay tuned",
-	"usernameError" : "Your username can only contain letters (uppercase and lowercase), numbers, full dots and underscope",
-	"mailError" : "Please introduce a valid email address",
-	"usernameLength" : "Your username has to be 3 characters long or more",
-	"mailEmpty" : "Please introduce an email address",
-	"dataChanged" : "Your data has been changed successfully",
-	"passwordLength" : "Your password must be more than 6 characters long",
-	"passwordChanged" : "Your password has been changed successfully",
-	"retrievePassword" : "Please send us a mail to weezeel@weezeel.com asking us to retrieve your password. Thank you.",
-	"freeSpace" : "FREE",
-	"inviteTitle" : "Generate a weeKey for a friend to try out weeZeel",
-	"inviteExplanation" : "Be sure who you invite, you only have 1 invitation to use. Beware who uses your weeKey because if your friend gets banned you will also be responsible.",
-	"inviteButton" : "Generate!",
-	"upgradePlans" : "In the future you'll be able to upgrade your account.",
-	"changeLanguage" : "Here you'll be able to change your account language.",
-	"changeDate" : "On this tab you will modify the date & hour you want to use.",
-	"changeWallpaper" : "Many wallpapers so you can decorate weeZeel as you like. You can also upload photos or use those which are on weeXplorer.",
-	"aboutError" : "weeZeel Team, who is weeZeel and what do we want.",
-	"usedweeKey" : "Your weeKey has already been used",
-	"demoweeKey" : "Demo accounts can't create weeKeys"
+	"social"  : "Social Networks",
+	"config"  : "Configuration",
+	"custom"  : "Customize",
+	"invite"  : "Invite",
+	"about"   : "About",
+	
+	"hddTitle"         : "YOUR HARD DRIVE",
+	"hddDescription"   : "Here you can change your plan and view how much free space you have left",
+	"currentUsage"     : "Current usage",
+	"moreFeatures"     : "Need More Features?",
+	"freeSpace"        : "Free",
+	"starter" 		   : "Starter",
+	"free" 			   : "Free",
+	"pro" 		       : "Pro",
+	"proPrice" 	 	   : "$4,99",
+	"advance" 		   : "Advance",
+	"advancePrice"     : "$9,99",
+	"ultimate" 		   : "Ultimate",
+	"ultimatePrice"    : "$14,99",
+	"monthly" 		   : "monthly",
+	"forever" 		   : "forever",
+	"FREE" 			   : "FREE",
+	"storage" 		   : "of storage",
+	"starterUsage"     : "Starter usage",
+	"proUsage" 		   : "Pro usage",
+	"advanceUsage"     : "Advance usage",
+	"ultimateUsage"    : "Ultimate usage",
+	"support" 		   : "Support",
+	"supportForum"     : "via forum",
+	"supportMail3"     : "via email (72h)",
+	"supportMail2"     : "via email (48h)",
+	"supportMail1"     : "via email (24h)",
+	"supportTelephone" : "via telephone",
+	"safeFolders"      : "Safe folders",
+	"withPassword"     : "with password",
+	"subscribe"        : "Subscribe",
+
+	"accountTitle" 		 : "YOUR PROFILE",
+	"accountDescription" : "Here you can change your personal information",
+	"avatarEdit" 		 : "CHANGE",
+	"changePassword" 	 : "Change Password",
+	"saveChanges" 		 : "Save Changes",
+	"usernameChanged"	 : "Username changed",
+	"usernameChanged2"	 : "Your username has been changed to",
+	"mailChanged"		 : "Mail changed",
+	"mailChanged2"       : "Your mail has been changed to",
+
+	"passwordTitle" 	  : "YOUR PASSWORD",
+	"passwordDescription" : "Here you can change your current password",
+	"cancel" 		 	  : "Cancel",
+	"currentPassword"     : "Current Password",
+	"newPassword"		  : "New Password",
+	"confirmPassword"     : "Confirm New Password",
+
+	"socialTitle" 		: "SOCIAL NETWORKS",
+	"socialDescription" : "Here you can link all your social networks with your weeZeel account",
+	"facebookAccount"   : "Your Facebook account",
+	"twitterAccount"    : "Your Twitter account",
+
+	"dateTitle" 		  : "DATE & TIME",
+	"dateDescription" 	  : "Select the date & time format you desire",
+	"autoTime" 			  : "Set time and date automatically using current location",
+	"timeFormat" 		  : "Time format",
+	"hoursClock" 		  : "hours clock",
+	"dateFormat" 		  : "Date format",
+	"ddmmyy" 			  : "DD MM YY",
+	"mmddyy" 			  : "MM DD YY",
+	"yymmdd" 			  : "YY MM DD",
+
+	"languageTitle" 	  : "LANGUAGE",
+	"languageDescription" : "Please select the language of your weeZeel",
+
+	"customTitle" 		: "CUSTOMIZE",
+	"customDescription" : "Here you can change the look of your weeZeel",
+	"wallpaper" 		: "Wallpaper",
+	"upload" 			: "Upload",
+
+	"inviteTitle" 		: "INVITE",
+	"inviteDescription" : "Here you can generate weeKeys to get your friends inside weeZeel",
+	"generate" 		    : "Generate",
+	"invitesLeft" 	    : "Invites left",
+	"inviteBeware"      : "Beware who uses your weeKey because if your friend gets banned you will also be responsible",
+
+	"version"			: "Version",
+	"legalNotices"      : "Legal Notices",
+	"privacyPolicies"   : "Privacy Policies",
+
+	"facebookSettings" : "Facebook Settings",
+	"remove" 		   : "Remove",
+	"save" 			   : "Save"
 
 }
