--- a/language/es.json
+++ b/language/es.json
@@ -1,58 +1,97 @@
 
 {
 	
-	"hdd" : "Disco",
+	"hdd"     : "Disco",
 	"account" : "Cuenta",
-	"socialNetworks" : "Redes Sociales",
-	"language" : "Idioma",
-	"date" : "Fecha & Hora",
-	"wallpaper" : "Fondos",
-	"invite" : "Invitar",
-	"about" : "Acerca",
-	"moreFeatures" : "¿QUIERES MÁS FUNCIONES?",
-	"starter" : "STARTER",
-	"priceStarter" : "GRATIS",
-	"pro" : "PRO",
-	"pricePro" : "4,99€",
-	"advance" : "ADVANCE",
-	"priceAdvance" : "9,99€",
-	"ultimate" : "ULTIMATE",
-	"priceUltimate" : "14,99€",
-	"avatarEdit" : "EDITAR",
-	"usernameName" : "Usuario",
-	"usernameMail" : "Correo",
-	"changePassword" : "Cambiar Contraseña",
-	"saveData" : "Guardar cambios",
-	"passwordTitle" : "CONTRASEÑA",
-	"passwordDescription" : "Cambia tu contraseña o recupera la actual",
-	"forgotPassword" : "¿No la recuerdas?",
-	"oldPassword" : "Antigua Contraseña",
-	"newPassword" : "Nueva Contraseña",
-	"renewPassword" : "Repite la Contraseña",
-	"cancelPassword" : "Cancelar",
-	"savePassword" : "Guardar Cambios",
-	"socialDescription" : "Puedes asociar tus redes sociales con tu cuenta de weeZeel para saber qué es lo que pasa en todas ellas",
-	"twitterName" : "Tu cuenta de Twitter:",
-	"facebookName" : "Tu cuenta de Facebook:",
-	"socialBottom" : "Estamos trabajando en añadir más redes sociales, mantente atento",
-	"usernameError" : "Tu nombre de usuario sólo puede contener letras (mayúsculas y minúsculas), números, puntos y barra baja",
-	"mailError" : "Por favor introduce una dirección de correo electrónico válida",
-	"usernameLength" : "Tu nombre de usuario debe tener mínimo 3 carácteres",
-	"mailEmpty" : "No puedes dejar el campo de correo electrónico vacío",
-	"dataChanged" : "Tus datos han sido cambiados",
-	"passwordLength" : "Tu contraseña debe ser de 6 carácteres como mínimo",
-	"passwordChanged" : "Tu contraseña ha sido cambiada",
-	"retrievePassword" : "Por favor mándanos un correo a weezeel@weezeel.com pidiéndonos que te cambiemos la contraseña. Muchas gracias.",
-	"freeSpace" : "LIBRES",
-	"inviteTitle" : "Genera una weeKey para que un amigo pruebe weeZeel",
-	"inviteExplanation" : "Piensa bien a quién invitas, sólo dispones de 1 invitación para usar. Ten cuidado con quién usa tu weeeKey porque si tu amigo es baneado tu también serás responsable.",
-	"inviteButton" : "¡Generar!",
-	"upgradePlans" : "En el futuro podrás contratar más espacio y funcionalidades.",
-	"changeLanguage" : "Aquí vas a poder cambiar el idioma que tienes asociado a tu cuenta.",
-	"changeDate" : "En esta pestaña podrás modificar la fecha y hora que se te mostrará por defecto.",
-	"changeWallpaper" : "Una gran cartelera de fondos de escritorio para que decores weeZeel a tu gusto. Además podrás subir fotos tuyas o usar las que estén en weeXplorer.",
-	"aboutError" : "El equipo de weeZeel, quién compone el proyecto e ideales que perseguimos.",
-	"usedweeKey" : "Tu weeKey ya ha sido utilizada",
-	"demoweeKey" : "Las cuentas de demostración no pueden crear weeKeys"
+	"social"  : "Redes Sociales",
+	"config"  : "Configuración",
+	"custom"  : "Apariencia",
+	"invite"  : "Invitar",
+	"about"   : "Acerca",
+	
+	"hddTitle"         : "TU DISCO DURO",
+	"hddDescription"   : "Aquí puedes cambiar tu plan o ver cuanto espacio te queda libre",
+	"currentUsage"     : "Uso actual",
+	"moreFeatures"     : "¿Más funciones?",
+	"freeSpace"		   : "Libres",
+	"starter" 		   : "Starter",
+	"free" 			   : "Gratis",
+	"pro" 		       : "Pro",
+	"proPrice" 	 	   : "4,99€",
+	"advance" 		   : "Advance",
+	"advancePrice"     : "9,99€",
+	"ultimate" 		   : "Ultimate",
+	"ultimatePrice"    : "14,99€",
+	"monthly" 		   : "mensual",
+	"forever" 		   : "para siempre",	
+	"FREE" 			   : "GRATIS",
+	"storage" 		   : "de espacio",
+	"starterUsage"     : "Uso con Starter",
+	"proUsage" 		   : "Uso con Pro",
+	"advanceUsage"     : "Uso con Advance",
+	"ultimateUsage"    : "Uso con Ultimate",
+	"support" 		   : "Soporte",
+	"supportForum"     : "vía foro",
+	"supportMail3"     : "vía email (72h)",
+	"supportMail2"     : "vía email (48h)",
+	"supportMail1"     : "vía email (24h)",
+	"supportTelephone" : "vía telefónica",
+	"safeFolders"      : "Carpetas seguras",
+	"withPassword"     : "con contraseña",
+	"subscribe"        : "Suscribir",
+
+	"accountTitle" 		 : "TU CUENTA",
+	"accountDescription" : "Aquí puedes cambiar tu información personal",
+	"avatarEdit" 		 : "CAMBIAR",
+	"changePassword" 	 : "Cambiar Contraseña",
+	"saveChanges" 		 : "Guardar Cambios",
+	"usernameChanged"	 : "Nombre de usuario cambiado",
+	"usernameChanged2"	 : "Tu nombre de usuario ha sido cambiado por",
+	"mailChanged"		 : "Correo cambiado",
+	"mailChanged2"       : "Tu cuenta de correo ha sido cambiada por",
+
+	"passwordTitle" 	  : "TU CONTRASEÑA",
+	"passwordDescription" : "Aquí puedes cambiar tu contraseña actual",
+	"cancel" 		 	  : "Cancelar",
+	"currentPassword"     : "Contraseña Actual",
+	"newPassword"		  : "Nueva Contraseña",
+	"confirmPassword"     : "Confirma Nueva Contraseña",
+
+	"socialTitle" 		: "REDES SOCIALES",
+	"socialDescription" : "Aquí puedes asociar tus cuentas de redes sociales con tu cuenta de weeZeel",
+	"facebookAccount"   : "Cuentas de Facebook",
+	"twitterAccount"    : "Cuentas de Twitter",
+
+	"dateTitle" 		  : "FECHA Y HORA",
+	"dateDescription" 	  : "Selecciona la fecha y hora que desees",
+	"autoTime" 			  : "Ajustar la fecha y hora automáticamente",
+	"timeFormat" 		  : "Tipo hora",
+	"hoursClock" 		  : "horas",
+	"dateFormat" 		  : "Tipo fecha",
+	"ddmmyy" 			  : "DD MM AA",
+	"mmddyy" 			  : "MM DD AA",
+	"yymmdd" 			  : "AA MM DD",
+	
+	"languageTitle" 	  : "IDIOMA",
+	"languageDescription" : "Por favor selecciona el idioma de tu weeZeel",
+
+	"customTitle" 		: "PERSONALIZAR",
+	"customDescription" : "Aquí puedes cambiar el aspecto de tu weeZeel",
+	"wallpaper" 		: "Fondo de escritorio",
+	"upload" 			: "Subir",
+
+	"inviteTitle" 		: "INVITAR",
+	"inviteDescription" : "Aquí puedes generar weekeys para que tus amigos entren en weeZeel",
+	"generate" 		    : "Generar",
+	"invitesLeft" 	    : "Invitaciones restantes",
+	"inviteBeware"      : "Ten cuidado de quién usa tu weeKey porque si tu amigo es baneado tu también serás responsable",
+
+	"version"			: "Versión",
+	"legalNotices"      : "Notas Legales",
+	"privacyPolicies"   : "Política de Privacidad",
+
+	"facebookSettings" : "Ajustes de Facebook",
+	"remove" 		   : "Eliminar",
+	"save" 			   : "Guardar"
 
 }
