Preferences - Started Invite and Social

--- a/language/en.json
+++ b/language/en.json
@@ -14,23 +14,23 @@
     "currentUsage"     : "Current usage",
     "moreFeatures"     : "Need More Features?",
     "freeSpace"        : "Free",
-    "starter"            : "Starter",
-    "free"                : "Free",
-    "pro"                : "Pro",
-    "proPrice"             : "$4,99",
-    "advance"            : "Advance",
+    "starter"          : "Starter",
+    "free"             : "Free",
+    "pro"              : "Pro",
+    "proPrice"         : "$4,99",
+    "advance"          : "Advance",
     "advancePrice"     : "$9,99",
-    "ultimate"            : "Ultimate",
+    "ultimate"         : "Ultimate",
     "ultimatePrice"    : "$14,99",
-    "monthly"            : "monthly",
-    "forever"            : "forever",
-    "FREE"                : "FREE",
-    "storage"            : "of storage",
+    "monthly"          : "monthly",
+    "forever"          : "forever",
+    "FREE"             : "FREE",
+    "storage"          : "of storage",
     "starterUsage"     : "Starter usage",
-    "proUsage"            : "Pro usage",
+    "proUsage"         : "Pro usage",
     "advanceUsage"     : "Advance usage",
     "ultimateUsage"    : "Ultimate usage",
-    "support"            : "Support",
+    "support"          : "Support",
     "supportForum"     : "via forum",
     "supportMail3"     : "via email (72h)",
     "supportMail2"     : "via email (48h)",
@@ -40,60 +40,92 @@
     "withPassword"     : "with password",
     "subscribe"        : "Subscribe",
 
-    "accountTitle"          : "YOUR PROFILE",
+    "accountTitle"       : "YOUR PROFILE",
     "accountDescription" : "Here you can change your personal information",
-    "avatarEdit"          : "CHANGE",
-    "changePassword"      : "Change Password",
-    "saveChanges"          : "Save Changes",
-    "usernameChanged"     : "Username changed",
-    "usernameChanged2"     : "Your username has been changed to",
-    "mailChanged"         : "Mail changed",
+    "avatarEdit"         : "CHANGE",
+    "changePassword"     : "Change Password",
+    "saveChanges"        : "Save Changes",
+    "usernameChanged"    : "Username changed",
+    "usernameChanged2"   : "Your username has been changed to",
+    "mailChanged"        : "Mail changed",
     "mailChanged2"       : "Your mail has been changed to",
 
     "passwordTitle"       : "YOUR PASSWORD",
     "passwordDescription" : "Here you can change your current password",
-    "cancel"                : "Cancel",
+    "cancel"              : "Cancel",
     "currentPassword"     : "Current Password",
-    "newPassword"          : "New Password",
+    "newPassword"         : "New Password",
     "confirmPassword"     : "Confirm New Password",
-    "passwordChanged"      : "Password changed",
+    "passwordChanged"     : "Password changed",
     "passwordChanged2"    : "Your password has been changed",
 
-    "socialTitle"         : "SOCIAL NETWORKS",
+    "socialTitle"       : "SOCIAL NETWORKS",
     "socialDescription" : "Here you can link all your social networks with your weeZeel account",
     "facebookAccount"   : "Your Facebook account",
     "twitterAccount"    : "Your Twitter account",
 
-    "dateTitle"           : "DATE & TIME",
-    "dateDescription"       : "Select the date & time format you desire",
-    "autoTime"               : "Set time and date automatically using current location",
-    "timeFormat"           : "Time format",
-    "hoursClock"           : "hours clock",
-    "dateFormat"           : "Date format",
-    "ddmmyy"               : "DD MM YY",
-    "mmddyy"               : "MM DD YY",
-    "yymmdd"               : "YY MM DD",
+    "dateTitle"       : "DATE & TIME",
+    "dateDescription" : "Select the date & time format you desire",
+    "autoTime"        : "Set time and date automatically using current location",
+    "timeFormat"      : "Time format",
+    "hoursClock"      : "hours clock",
+    "dateFormat"      : "Date format",
+    "ddmmyy"          : "DD MM YY",
+    "mmddyy"          : "MM DD YY",
+    "yymmdd"          : "YY MM DD",
 
     "languageTitle"       : "LANGUAGE",
     "languageDescription" : "Please select the language of your weeZeel",
 
-    "customTitle"         : "CUSTOMIZE",
+    "customTitle"       : "CUSTOMIZE",
     "customDescription" : "Here you can change the look of your weeZeel",
     "wallpaper"         : "Wallpaper",
-    "upload"             : "Upload",
+    "upload"            : "Upload",
 
-    "inviteTitle"         : "INVITE",
+    "inviteTitle"       : "INVITE",
     "inviteDescription" : "Here you can generate weeKeys to get your friends inside weeZeel",
-    "generate"             : "Generate",
-    "invitesLeft"         : "Invites left",
+    "generate"          : "Generate",
+    "invitesLeft"       : "Invites left",
     "inviteBeware"      : "Beware who uses your weeKey because if your friend gets banned you will also be responsible",
 
-    "version"            : "Version",
+    "version"           : "Version",
     "legalNotices"      : "Legal Notices",
     "privacyPolicies"   : "Privacy Policies",
 
     "facebookSettings" : "Facebook Settings",
-    "remove"            : "Remove",
-    "save"                : "Save"
+    "remove"           : "Remove",
+    "save"             : "Save",
+
+    "twitter" : {
+
+        "message"       : "Private message from",
+        "reply"         : "has replied your tweet",
+        "mention"       : "has mentioned you",
+        "retweet"       : "has retweeted you",
+        "fav"           : "has favorited you",
+        "unfav"         : "has unfavorited you",
+        "follow"        : "You have a new follower",
+        "followMessage" : "now follows you"
+
+    },
+
+    "facebook" : {
+
+        "message"          : "New message from",
+        "request"          : "New friend request from",
+        "photoPosted"      : "has posted a photo",
+        "photoPostedText1" : "has uploaded",
+        "photoPostedText2" : "has uploaded a new photo",
+        "linkPosted"       : "New link posted by",
+        "statusUpdated"    : "updated his status",
+        "noteCreated"      : "published a note",
+        "noteCreatedText"  : "has created",
+        "videoPosted"      : "posted a video",
+        "videoPostedText1" : "has uploaded",
+        "videoPostedText2" : "has uploaded a new video",
+        "eventCreated"     : "You've been invited to an event",
+        "eventCreatedText" : "has invited you to"
+
+    }
 
 }
