--- a/language/es.json
+++ b/language/es.json
@@ -13,24 +13,24 @@
     "hddDescription"   : "Aquí puedes cambiar tu plan o ver cuanto espacio te queda libre",
     "currentUsage"     : "Uso actual",
     "moreFeatures"     : "¿Más funciones?",
-    "freeSpace"           : "Libres",
-    "starter"            : "Starter",
-    "free"                : "Gratis",
-    "pro"                : "Pro",
-    "proPrice"             : "4,99€",
-    "advance"            : "Advance",
+    "freeSpace"        : "Libres",
+    "starter"          : "Starter",
+    "free"             : "Gratis",
+    "pro"              : "Pro",
+    "proPrice"         : "4,99€",
+    "advance"          : "Advance",
     "advancePrice"     : "9,99€",
-    "ultimate"            : "Ultimate",
+    "ultimate"         : "Ultimate",
     "ultimatePrice"    : "14,99€",
-    "monthly"            : "mensual",
-    "forever"            : "para siempre",    
-    "FREE"                : "GRATIS",
-    "storage"            : "de espacio",
+    "monthly"          : "mensual",
+    "forever"          : "para siempre",    
+    "FREE"             : "GRATIS",
+    "storage"          : "de espacio",
     "starterUsage"     : "Uso con Starter",
-    "proUsage"            : "Uso con Pro",
+    "proUsage"         : "Uso con Pro",
     "advanceUsage"     : "Uso con Advance",
     "ultimateUsage"    : "Uso con Ultimate",
-    "support"            : "Soporte",
+    "support"          : "Soporte",
     "supportForum"     : "vía foro",
     "supportMail3"     : "vía email (72h)",
     "supportMail2"     : "vía email (48h)",
@@ -40,60 +40,92 @@
     "withPassword"     : "con contraseña",
     "subscribe"        : "Suscribir",
 
-    "accountTitle"          : "TU CUENTA",
+    "accountTitle"       : "TU CUENTA",
     "accountDescription" : "Aquí puedes cambiar tu información personal",
-    "avatarEdit"          : "CAMBIAR",
-    "changePassword"      : "Cambiar Contraseña",
-    "saveChanges"          : "Guardar Cambios",
-    "usernameChanged"     : "Nombre de usuario cambiado",
-    "usernameChanged2"     : "Tu nombre de usuario ha sido cambiado por",
-    "mailChanged"         : "Correo cambiado",
+    "avatarEdit"         : "CAMBIAR",
+    "changePassword"     : "Cambiar Contraseña",
+    "saveChanges"        : "Guardar Cambios",
+    "usernameChanged"    : "Nombre de usuario cambiado",
+    "usernameChanged2"   : "Tu nombre de usuario ha sido cambiado por",
+    "mailChanged"        : "Correo cambiado",
     "mailChanged2"       : "Tu cuenta de correo ha sido cambiada por",
 
     "passwordTitle"       : "TU CONTRASEÑA",
     "passwordDescription" : "Aquí puedes cambiar tu contraseña actual",
-    "cancel"                : "Cancelar",
+    "cancel"              : "Cancelar",
     "currentPassword"     : "Contraseña Actual",
-    "newPassword"          : "Nueva Contraseña",
+    "newPassword"         : "Nueva Contraseña",
     "confirmPassword"     : "Confirma Nueva Contraseña",
-    "passwordChanged"      : "Contraseña cambiada",
+    "passwordChanged"     : "Contraseña cambiada",
     "passwordChanged2"    : "Tu contraseña ha sido cambiada correctamente",
 
-    "socialTitle"         : "REDES SOCIALES",
+    "socialTitle"       : "REDES SOCIALES",
     "socialDescription" : "Aquí puedes asociar tus cuentas de redes sociales con tu cuenta de weeZeel",
     "facebookAccount"   : "Cuentas de Facebook",
     "twitterAccount"    : "Cuentas de Twitter",
 
-    "dateTitle"           : "FECHA Y HORA",
-    "dateDescription"       : "Selecciona la fecha y hora que desees",
-    "autoTime"               : "Ajustar la fecha y hora automáticamente",
-    "timeFormat"           : "Tipo hora",
-    "hoursClock"           : "horas",
-    "dateFormat"           : "Tipo fecha",
-    "ddmmyy"               : "DD MM AA",
-    "mmddyy"               : "MM DD AA",
-    "yymmdd"               : "AA MM DD",
+    "dateTitle"       : "FECHA Y HORA",
+    "dateDescription" : "Selecciona la fecha y hora que desees",
+    "autoTime"        : "Ajustar la fecha y hora automáticamente",
+    "timeFormat"      : "Tipo hora",
+    "hoursClock"      : "horas",
+    "dateFormat"      : "Tipo fecha",
+    "ddmmyy"          : "DD MM AA",
+    "mmddyy"          : "MM DD AA",
+    "yymmdd"          : "AA MM DD",
     
     "languageTitle"       : "IDIOMA",
     "languageDescription" : "Por favor selecciona el idioma de tu weeZeel",
 
-    "customTitle"         : "PERSONALIZAR",
+    "customTitle"       : "PERSONALIZAR",
     "customDescription" : "Aquí puedes cambiar el aspecto de tu weeZeel",
     "wallpaper"         : "Fondo de escritorio",
-    "upload"             : "Subir",
+    "upload"            : "Subir",
 
-    "inviteTitle"         : "INVITAR",
+    "inviteTitle"       : "INVITAR",
     "inviteDescription" : "Aquí puedes generar weekeys para que tus amigos entren en weeZeel",
-    "generate"             : "Generar",
-    "invitesLeft"         : "Invitaciones restantes",
+    "generate"          : "Generar",
+    "invitesLeft"       : "Invitaciones restantes",
     "inviteBeware"      : "Ten cuidado de quién usa tu weeKey porque si tu amigo es baneado tu también serás responsable",
 
-    "version"            : "Versión",
+    "version"           : "Versión",
     "legalNotices"      : "Notas Legales",
     "privacyPolicies"   : "Política de Privacidad",
 
     "facebookSettings" : "Ajustes de Facebook",
-    "remove"            : "Eliminar",
-    "save"                : "Guardar"
+    "remove"           : "Eliminar",
+    "save"             : "Guardar",
+
+    "twitter" : {
+
+        "message"       : "Mensaje privado de",
+        "reply"         : "ha respondido tu tweet",
+        "mention"       : "te ha mencionado",
+        "retweet"       : "te ha retwitteado",
+        "fav"           : "te ha favoriteado",
+        "unfav"         : "te ha unfavoriteado",
+        "follow"        : "Tienes un nuevo seguidor",
+        "followMessage" : "ahora te sigue"
+
+    },
+
+    "facebook" : {
+
+        "message"          : "Nuevo mensaje de",
+        "request"          : "Nueva solicitud de",
+        "photoPosted"      : "ha posteado una foto",
+        "photoPostedText1" : "ha subido",
+        "photoPostedText2" : "ha subido una nueva foto",
+        "linkPosted"       : "Nuevo enlace de",
+        "statusUpdated"    : "ha actualizado su estado",
+        "noteCreated"      : "ha publicado una nota",
+        "noteCreatedText"  : "ha creado",
+        "videoPosted"      : "ha posteado un video",
+        "videoPostedText1" : "ha subido",
+        "videoPostedText2" : "ha subido un nuevo video",
+        "eventCreated"     : "Te han invitado a un evento",
+        "eventCreatedText" : "te ha invitado a"
+
+    }
 
 }
